--- a/MiniShop.Front/index.html
+++ b/MiniShop.Front/index.html
@@ -33,32 +33,32 @@
                     </div>
                 </div>
                 
-                <div class="col-md-3">
-                    <div class="d-flex justify-content-end gap-2">
-                        <button id="auth-btn" class="btn btn-outline-light">
-                            <i class="bi bi-person me-1"></i>
-                            Войти
-                        </button>
-                        <button id="admin-btn" class="btn btn-outline-light d-none">
-                            <i class="bi bi-shield-lock me-1"></i>
-                            Админ панель
-                        </button>
-                        <button class="btn btn-outline-light btn-sm">
-                            <i class="bi bi-person"></i>
-                        </button>
-                        <button class="btn btn-outline-light btn-sm">
-                            <i class="bi bi-heart"></i>
-                        </button>
-                        <button class="btn btn-outline-light btn-sm position-relative">
-                            <i class="bi bi-cart3"></i>
-                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                                0
-                            </span>
-                        </button>
-                    </div>
+            <div class="col-md-3">
+                <div class="d-flex justify-content-end gap-2">
+                    <button id="auth-btn" class="btn btn-outline-light">
+                        <i class="bi bi-person me-1"></i>
+                        Войти
+                    </button>
+                    <button id="admin-btn" class="btn btn-outline-light d-none">
+                        <i class="bi bi-shield-lock me-1"></i>
+                        Админ панель
+                    </button>
+                    <button class="btn btn-outline-light btn-sm">
+                        <i class="bi bi-person"></i>
+                    </button>
+                    <button class="btn btn-outline-light btn-sm">
+                        <i class="bi bi-heart"></i>
+                    </button>
+                    <!-- Новая кнопка -->
+                    <a href="#cart" class="btn btn-outline-light btn-sm position-relative">
+                        <i class="bi bi-cart3"></i>
+                        <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                            0
+                        </span>
+                    </a>
                 </div>
             </div>
-            
+
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
                 <div class="container-fluid px-0">
@@ -73,21 +73,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#product">Все товары</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#vegetables">Овощи</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#fruits">Фрукты</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#meat">Мясо</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#dairy">Молочные продукты</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#bakery">Выпечка</a>
-                            </li>
+
                             <li class="nav-item">
                                 <a class="nav-link" href="#contacts">Контакты</a>
                             </li>
