App version with session cart

--- a/MiniShop.Front/index.html
+++ b/MiniShop.Front/index.html
@@ -43,18 +43,12 @@
                         <i class="bi bi-shield-lock me-1"></i>
                         Админ панель
                     </button>
-                    <button class="btn btn-outline-light btn-sm">
+                    <button class="btn btn-outline-light btn-sm d-none" id="user-icon-btn">
                         <i class="bi bi-person"></i>
+                        Профиль
                     </button>
-                    <button class="btn btn-outline-light btn-sm">
-                        <i class="bi bi-heart"></i>
-                    </button>
-                    <!-- Новая кнопка -->
                     <a href="#cart" class="btn btn-outline-light btn-sm position-relative">
                         <i class="bi bi-cart3"></i>
-                        <span id="cart-count" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                            0
-                        </span>
                     </a>
                 </div>
             </div>
