--- a/MiniShop.Front/pages/home.html
+++ b/MiniShop.Front/pages/home.html
@@ -1,48 +1,42 @@
 <div class="fade-in">
-    <!-- Промо-баннер -->
-    <div id="promoCarousel" class="carousel slide promo-carousel mb-5" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="#" class="d-block w-100" alt="Акция 1">
-            </div>
-            <div class="carousel-item">
-                <img src="#" class="d-block w-100" alt="Акция 2">
-            </div>
+  <!-- Промо-баннер -->
+  <div id="promoCarousel" class="carousel slide promo-carousel mb-5 shadow-sm" data-bs-ride="carousel">
+    <div class="carousel-inner rounded-4 overflow-hidden">
+
+      <!-- Слайд 1 -->
+      <div class="carousel-item active">
+        <img src="image/Dunder_Mifflin,_Inc.svg" class="d-block w-100" alt="Dunder Mifflin Paper">
+        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+          <h3 class="text-warning">Dunder Mifflin Paper Company</h3>
+          <p>Paper you can trust — since 1949</p>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#promoCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#promoCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
+      </div>
+
+      <!-- Слайд 2 -->
+      <div class="carousel-item">
+        <img src="image/merch.avif" class="d-block w-100" alt="The Office Merch">
+        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+          <h3 class="text-warning">The Office Merch Collection</h3>
+          <p>Official mugs, shirts, and Dundie Awards 🏆</p>
+        </div>
+      </div>
+
+      <!-- Слайд 3 -->
+      <div class="carousel-item">
+        <img src="image/theoffice.jpg" class="d-block w-100" alt="Regional Manager Sale">
+        <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
+          <h3 class="text-warning">Michael Scott Special Sale</h3>
+          <p>Everything you need to become the World’s Best Boss ☕</p>
+        </div>
+      </div>
     </div>
 
-    <!-- Популярные категории -->
-    <h2 class="section-title">Популярные категории</h2>
-    <div class="row text-center">
-        <div class="col-md-3 mb-4">
-            <a href="#vegetables" class="category-card d-block p-4 bg-white shadow-sm rounded">
-                <i class="bi bi-basket2-fill category-icon"></i>
-                <h5>Овощи</h5>
-            </a>
-        </div>
-        <div class="col-md-3 mb-4">
-            <a href="#fruits" class="category-card d-block p-4 bg-white shadow-sm rounded">
-                <i class="bi bi-apple category-icon"></i>
-                <h5>Фрукты</h5>
-            </a>
-        </div>
-        <div class="col-md-3 mb-4">
-            <a href="#meat" class="category-card d-block p-4 bg-white shadow-sm rounded">
-                <i class="bi bi-egg-fried category-icon"></i>
-                <h5>Мясо</h5>
-            </a>
-        </div>
-        <div class="col-md-3 mb-4">
-            <a href="#dairy" class="category-card d-block p-4 bg-white shadow-sm rounded">
-                <i class="bi bi-cup-straw category-icon"></i>
-                <h5>Молочные</h5>
-            </a>
-        </div>
-    </div>
+    <!-- Кнопки навигации -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#promoCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#promoCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
 </div>
