--- a/MiniShop.Front/pages/product.html
+++ b/MiniShop.Front/pages/product.html
@@ -1,7 +1,10 @@
 <div class="fade-in">
-    <h2 class="page-title">Все товары</h2>
+    <h2 class="page-title text-dunder text-center mb-4">🧻 Наши товары</h2>
+    <p class="text-center text-muted mb-5 fst-italic">
+        “Бумага Dunder Mifflin — это не просто бумага. Это обещание качества.” — Pam Beesly
+    </p>
+
     <div class="row" id="products-list">
-       
-        <!-- Потом можно рендерить из JS -->
+        <!-- JS отрисует товары -->
     </div>
 </div>
