--- a/MiniShop.Front/pages/profile.html
+++ b/MiniShop.Front/pages/profile.html
@@ -1,20 +1,26 @@
 <div class="fade-in col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-    <h2 class="page-title text-center mb-4">Профиль — Мои заказы</h2>
+    <h2 class="page-title text-center mb-4 text-dunder">👤 Профиль — Мои заказы</h2>
+    <p class="text-center text-muted fst-italic mb-5">
+        “Успешная продажа — это как шутка. Если ты должен её объяснять — она не работает.” — Dwight Schrute
+    </p>
 
     <div id="profile-alert" class="alert d-none" role="alert"></div>
 
     <div id="orders-container">
         <!-- Спиннер загрузки -->
         <div id="orders-loading" class="text-center py-4">
-            <div class="spinner-border" role="status"><span class="visually-hidden">Loading...</span></div>
+            <div class="spinner-border text-dunder" role="status">
+                <span class="visually-hidden">Загрузка...</span>
+            </div>
         </div>
 
         <!-- Список заказов -->
-        <div id="orders-list" class="accordion" ></div>
+        <div id="orders-list" class="accordion"></div>
 
         <!-- Пустой стейт -->
         <div id="orders-empty" class="text-center text-muted py-4 d-none">
-            У вас ещё нет заказов.
+            У вас пока нет заказов.<br>
+            <span class="fst-italic">“Купи бумагу. Спаси офис.” — Jim Halpert</span>
         </div>
     </div>
 </div>
